--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -17,9 +17,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": "."
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules"]
 }
