--- a/app/package.json
+++ b/app/package.json
@@ -19,7 +19,8 @@
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "whatwg-fetch": "^3.2.0"
   },
   "scripts": {
     "start:dev": "react-scripts start",
