--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-select": "^3.0.14",
     "@types/styled-components": "^5.1.1",
     "@types/styled-system": "^5.1.9",
     "http-proxy-middleware": "^1.0.5",
@@ -18,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "styled-components": "^5.1.1",
     "styled-system": "^5.1.5",
     "typescript": "~3.7.2",
