--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "start:dev": "react-scripts start",
     "build": "react-scripts build",
+    "build:clean": "rm -rf build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
