--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "start:dev": "nodemon",
-    "build": "tsc"
+    "build": "tsc",
+    "build:clean": "rm -rf dist"
   },
   "author": "Tiago Gomes",
   "license": "ISC",
