--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@types/styled-system": "^5.1.9",
     "http-proxy-middleware": "^1.0.5",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
