--- a/app/package.json
+++ b/app/package.json
@@ -69,11 +69,19 @@
   },
   "browserslist": {
     "production": [
+      "ie 11",
+      "ie 9-11",
+      "ie > 9",
+      "last 100 ie version",
       ">0.2%",
       "not dead",
       "not op_mini all"
     ],
     "development": [
+      "ie 11",
+      "ie 9-11",
+      "ie > 9",
+      "last 100 ie version",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
