--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "concurrently": "^5.2.0"
   },
   "scripts": {
-    "start": "concurrently \"yarn workspace app start:dev\" \"yarn workspace server start:dev\"",
+    "start": "yarn workspace server start",
+    "start:dev": "concurrently \"yarn workspace app start:dev\" \"yarn workspace server start:dev\"",
     "build": "concurrently \"yarn workspace app build\" \"yarn workspace server build\"",
     "build:clean": "concurrently \"yarn workspace app build:clean\" \"yarn workspace server build:clean\"",
-    "start:server": "yarn workspace server start",
     "heroku-postbuild": "yarn build"
   }
 }
