--- a/app/package.json
+++ b/app/package.json
@@ -88,5 +88,6 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5"
-  }
+  },
+  "proxy":"http://localhost:8000"
 }
