--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "build": "react-scripts build",
     "build:clean": "rm -rf build",
     "test": "react-scripts test",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "eject": "react-scripts eject",
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
     "format": "prettier --write src/**/*.ts{,x}"
@@ -89,5 +90,5 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5"
   },
-  "proxy":"http://localhost:8000"
+  "proxy": "http://localhost:8000"
 }
