--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Run app test
-      run: yarn test:ci
+    - name: Frontend tests
+    - uses: borales/actions-yarn@v2.0.0
+      with:
+        cmd: test:ci
